[package]
name = "ishango"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Track numerical values in different buckets"
repository = "https://github.com/TheodoreEhrenborg/ishango"
readme = "README.md"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.29", features = ["derive"] }
directories = "6.0.0"
regex = "1.11.1"
serde = {version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"


[profile.release]
strip = true
opt-level = "z"
lto = true
